# segip-recursos-humanos-clockcontrol

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  AUDITORIA_CODIGO.md  AUDITORIA_Y_MEJORAS.md  Dockerfile  GUIA_COMPLETA.md  GUIA_DESPLIEGUE_PRODUCCION.md  GUIA_DOCKER.md  GUIA_DOCKER_RUN.md  HISTORIAL_SESIONES.md  README.md  docker-compose.yml  docker-entrypoint.sh  install.sh  pyproject.toml  requirements.txt  tmp.database.ini
.claude/: settings.local.json
clockcontrol/: __init__.py  __main__.py  cli.py
clockcontrol/config/: __init__.py  settings.py
clockcontrol/core/: __init__.py  attendance.py  device.py  exceptions.py
clockcontrol/database/: __init__.py  connection.py  models.py  repositories.py
scripts/: run_all.sh  run_single.sh
sql/: audit_trigger_person_marks.sql
sql/stored_procedures/: 001_create_stored_procedure.sql
tests/: __init__.py  test_attendance.py
